feat: add functional keys & letter keys

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div>
-      <input
+      <textarea
         id="input_main"
         type="text"
         value=""
         oninput="change(this.value)"
         autofocus
-      />
+      ></textarea>
     </div>
   </body>
   <script type="text/javascript" src="script.js"></script>
