fix: functional keys

--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="keys.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div>
-      <textarea
-        id="input_main"
-        type="text"
-        value=""
-        oninput="change(this.value)"
-        autofocus
-      ></textarea>
+      <textarea id="input_main" type="text" value="" autofocus></textarea>
     </div>
   </body>
   <script type="text/javascript" src="script.js"></script>
