fix: layout styles

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="keys.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-    <div>
-      <textarea id="input_main" type="text" value="" autofocus></textarea>
-    </div>
-  </body>
+  <body></body>
   <script type="text/javascript" src="script.js"></script>
 </html>
